<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde"
    tools:context=".PrincipalActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="405dp"
        android:layout_height="179dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <GridView
                android:id="@+id/gripDatos"
                android:layout_width="800dp"
                android:background="@color/white"
                android:layout_height="match_parent"
                android:numColumns="7" />
        </LinearLayout>


    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="191dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/titulo2"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

    <ScrollView
        android:layout_width="392dp"
        android:layout_height="451dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encabezado3"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:background="@color/gris"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/plane1"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encabezaso1"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtmatricula"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:background="@color/gris"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/plane2"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encabezado2"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtedad"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:background="@color/gris"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/plane3"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encabezado4" />

            <EditText
                android:id="@+id/txtsemestre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:background="@color/gris"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/plane5" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encabezado5" />

            <EditText
                android:id="@+id/txtpromedio"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:background="@color/gris"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/plane4" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/encabezado6" />

            <EditText
                android:id="@+id/txtestado"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="no"
                android:background="@color/gris"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/plane6"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:text="@string/btn2" />

            <Button
                android:id="@+id/btn_modificar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn3" />

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bnt1" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>